syntax = "proto3";

option go_package = "aresdata/api/v1;v1";

import "google/protobuf/timestamp.proto";

// 原始数据条目
message SourceData {
  int64 id = 1;
  string provider_name = 2;
  string data_type = 3;
  string raw_content = 4; // 存储原始的JSON字符串
  google.protobuf.Timestamp fetched_at = 5;
  int32 status = 6;
  string entity_id = 7;
}
